[package]
name = "eth_trie"
version = "0.1.0"
authors = ["Jason Carver <ut96caarrs@snkmail.com>"]
description = "Ethereum-compatible Merkle-Patricia Trie."
license = "Apache-2.0"
edition = "2018"
readme = "README.md"
keywords = ["patricia", "mpt", "evm", "trie", "ethereum"]
repository = "https://github.com/carver/eth-trie.rs"
homepage = "https://github.com/carver/eth-trie.rs"
documentation = "https://docs.rs/eth_trie"

[dependencies]
parking_lot = "0.8"
rlp = "0.3.0"
hashbrown = "0.3.0"
hasher = { version = "0.1", features = ["hash-keccak"] }

[dev-dependencies]
rand = "0.6.3"
hex = "0.3.2"
criterion = "0.2.10"
ethereum-types = "0.5.2"
uuid = { version = "0.7", features = ["serde", "v4"] }

[[bench]]
name = "trie"
harness = false
